# timelooper

./: .travis.yml  README.md  pyproject.toml
test/: test_timelooper.py
timelooper/: __init__.py  looptime.py
