[tool.poetry]
name = "timelooper"
version = "0.1.1"
description = "Timed loops made simple"
authors = ["monomonedula <valh@tuta.io>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/monomonedula/timelooper"
homepage = "https://github.com/monomonedula/timelooper"
keywords = ["asyncio", "utility"]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
